# packsonnet

./: BUILD.bazel  README.md  WORKSPACE  main.libsonnet
examples/core/indexed_files/: README.md  package.libsonnet
examples/core/multiple_files/: README.md  package.libsonnet
examples/core/simple/: README.md  package.libsonnet
examples/core/simple_with_config/: README.md  package.libsonnet
examples/indexed_files/: BUILD.bazel  README.md  package.libsonnet
examples/multiple_files/: BUILD.bazel  README.md  package.libsonnet
examples/simple/: BUILD.bazel  README.md  package.libsonnet
examples/simple_with_config/: BUILD.bazel  README.md  main.jsonnet  package.libsonnet
packsonnet/: BUILD.bazel  main.libsonnet  test.jsonnet  test_result.json
packsonnet/config/: BUILD.bazel  main.libsonnet
packsonnet/core/: BUILD.bazel  test.jsonnet  test_result.json
packsonnet/core/file/: BUILD.bazel  main.libsonnet
packsonnet/core/package/: BUILD.bazel  main.libsonnet
packsonnet/core/resource/: main.libsonnet
packsonnet/k8s/: BUILD.bazel  test.jsonnet  test_result.json
packsonnet/k8s/package/: BUILD.bazel  main.libsonnet
packsonnet/k8s/resource/: BUILD.bazel  main.libsonnet  test.jsonnet  test_result.json
packsonnet/package/: BUILD.bazel  main.libsonnet
packsonnet/resource/: BUILD.bazel
