load(
    "@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl",
    "jsonnet_library",
    "jsonnet_to_json_test"
)

jsonnet_library(
    name = "packsonnet",
    srcs = [
        "main.libsonnet",
    ],
    deps = [
        "//packsonnet/package:package",
        "//packsonnet/file:file",
    ],
    visibility = [
        "//:__pkg__",
    ],
)

jsonnet_to_json_test(
    name = "tests",
    src = "test.jsonnet",
    deps = [
        ":packsonnet",
    ],
    golden = "test_result.json",
)
