load(
    "@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl",
    "jsonnet_library",
    "jsonnet_to_json",
)

jsonnet_library(
    name = "package",
    srcs = [
        "package.libsonnet",
    ],
    deps = [
        "//:packsonnet",
    ],
)

jsonnet_to_json(
    name = "indexed_files",
    src = "main.jsonnet",
    deps = [
        ":package",
    ],
    outs = [
        "01_foo.json",
        "02_bar.json",
    ],
)
