load(
    "@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl",
    "jsonnet_library",
    "jsonnet_to_json",
)

jsonnet_library(
    name = "package",
    srcs = [
        "package.libsonnet",
    ],
    deps = [
        "//:packsonnet",
    ],
)

jsonnet_to_json(
    name = "simple",
    src = "main.jsonnet",
    deps = [
        ":package",
    ],
    multiple_outputs = True,
    outs = [
        "foo.json",
    ],
)
