load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library")

jsonnet_library(
    name = "package",
    srcs = [
        "main.libsonnet",
    ],
    deps = [
        "//packsonnet/core/config:config",
        "//packsonnet/core/resource:resource",
        "//packsonnet/core/file:file",
    ],
    visibility = [
        "//packsonnet:__subpackages__",
    ],
)
