load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library")

jsonnet_library(
    name = "package",
    srcs = [
        "main.libsonnet",
    ],
    deps = [
        "//packsonnet/core:core",
        "//packsonnet/k8s/file:file",
    ],
    visibility = [
        "//packsonnet:__subpackages__",
    ],
)
