load(
    "@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl",
    "jsonnet_library",
    "jsonnet_to_json_test",
)

jsonnet_library(
    name = "resource",
    srcs = [
        "main.libsonnet",
    ],
    visibility = [
        "//packsonnet:__subpackages__",
    ],
)

jsonnet_to_json_test(
    name = "tests",
    src = "test.jsonnet",
    deps = [
        ":resource",
    ],
    golden = "test_result.json",
)
